<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:background="@drawable/textview_blue_light"
              android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myinfo_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:src="@mipmap/lightsmile"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:textSize="12sp"
            android:id="@+id/myinfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
        <TextView
            android:textSize="10sp"
            android:id="@+id/myinfo_date"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <TextView
            android:textSize="10sp"
            android:id="@+id/myinfo_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"/>
    </LinearLayout>
    <Button
        android:id="@+id/myinfo_delite"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:text="@string/delite"
        android:background="@drawable/button_style"/>
</LinearLayout>
