<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorblue"
    tools:context="com.example.defangfang.schoolinfopublishsystem.AddInfo">
<com.example.defangfang.schoolinfopublishsystem.CommonUI.TitleLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></com.example.defangfang.schoolinfopublishsystem.CommonUI.TitleLayout>
    <LinearLayout
    android:layout_marginTop="100dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>
    <EditText
        android:textAlignment="center"
        android:textSize="15sp"
        android:id="@+id/add_info_title"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_edittext_selector"/>
</LinearLayout>
<LinearLayout
    android:layout_marginTop="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"/>
    <EditText
        android:id="@+id/add_info_detail"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_edittext_selector"
        />
</LinearLayout>
    <Button
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:id="@+id/add_info_publish"/>
</LinearLayout>
